--- a/src/style.scss
+++ b/src/style.scss
@@ -1,54 +1,87 @@
 .mainContainer {
-    padding: 1em 2em;
-    display: grid;
-    gap: 1em;
-    nav {
+  background-color: rgb(251, 219, 224);
+  padding: 1em 2em;
+  display: grid;
+  gap: 1em;
+  height: 100vh;
+  nav {
+    display: flex;
+    justify-content: space-between;
+    .logo {
+      font-weight: 900;
+    }
+    .links ul {
+      margin: 0;
+      display: flex;
+      gap: 1em;
+      list-style: none;
+      li {
+        background-color: gray;
+        padding: 6px 12px;
+        border-radius: 4px;
+        color: white;
+        cursor: pointer;
+        &#add {
+          background-color: rgb(25, 209, 25);
+        }
+      }
+    }
+  }
+  .taskContainer {
+    .inputs {
+      display: grid;
+      gap: 0.5em;
+      grid-template-columns: 1fr 1fr;
+      label {
         display: flex;
-        justify-content: space-between;
-        .links ul {
-            margin: 0;
-            display: flex;
-            gap: 1em;
-            list-style: none;
-        }
+        gap: 8px;
+      }
+      input {
+        flex: 1;
+      }
+      textarea {
+        flex: 1;
+        height: 10em;
+        grid-column: span 2;
+      }
+      button {
+        width: 8em;
+        height: 2em;
+        justify-self: end;
+        grid-column-start: 2;
+      }
+      button {
+        background-color: rgb(110, 110, 236);
+        color: white;
+        border-radius: 8px;
+        border: none;
+        outline: none;
+        padding: 4px 8px;
+      }
     }
-    .taskContainer {
-        .inputs {
-            display: grid;
-            gap: 0.5em;
-            textarea {
-                height: 10em;
-            }
-            button {
-                width: 8em;
-                height: 2em;
-                justify-self: end;
-            }
+  }
+  .accordion {
+    .title {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      h2 {
+        margin: 0;
+      }
+      .action {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        .dateDetail {
+          font-size: smaller;
+          display: grid;
         }
+      }
     }
-    .accordion {
-        .title {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            h2 {
-                margin: 0;
-            }
-            .action {
-                display: flex;
-                align-items: center;
-                gap: 8px;
-                .dateDetail {
-                    font-size: smaller;
-                display: grid;
-            }
-        }
-            }
-            .content {
-            p {
-                text-align: start;
-            }
-
-        }
+    .content {
+      p {
+        text-align: start;
+      }
     }
+  }
 }
