--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,48 @@
   display: grid;
   gap: 1em;
   height: 100vh;
+  grid-template-rows: 2em 1fr;
+}
+.mainContainer .popUp {
+  position: fixed;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100vw;
+  top: 0;
+  left: 0;
+  display: grid;
+  place-content: center;
+}
+.mainContainer .popUp .container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1em;
+  padding: 2em 4em;
+  background-color: white;
+  border-radius: 0.7em;
+}
+.mainContainer .popUp .container h3 {
+  grid-column: span 2;
+}
+.mainContainer .popUp .container button {
+  background-color: rgb(25, 209, 25);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+.mainContainer .popUp .container button:active {
+  scale: 0.9;
+}
+.mainContainer .popUp .container button#yes {
+  background-color: rgb(241, 106, 106);
+}
+.mainContainer .popUp .container button#yes:hover {
+  background-color: rgb(243, 71, 71);
+}
+.mainContainer .popUp .container button:hover {
+  background-color: rgb(4, 168, 4);
 }
 .mainContainer nav {
   display: flex;
@@ -58,6 +100,18 @@
   border: none;
   outline: none;
   padding: 4px 8px;
+}
+.mainContainer .accordion ul {
+  display: grid;
+  gap: 0.5em;
+}
+.mainContainer .accordion ul li {
+  cursor: pointer;
+  padding: 0.2em 0.3em;
+  border-radius: 8px;
+}
+.mainContainer .accordion ul li:hover {
+  background-color: lightpink;
 }
 .mainContainer .accordion .title {
   display: flex;
