--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,48 @@
   display: grid;
   gap: 1em;
   height: 100vh;
+  grid-template-rows: 2em 1fr;
+  .popUp {
+    position: fixed;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 100vw;
+    top: 0;
+    left: 0;
+    display: grid;
+    place-content: center;
+    .container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1em;
+        padding: 2em 4em;
+        background-color: white;
+        border-radius: 0.7em;
+        h3 {
+            grid-column: span 2;
+        }
+        button {
+            background-color: rgb(25, 209, 25);
+            color: white;
+            border: none;
+            border-radius: 4px;
+            padding: 6px 12px;
+            cursor: pointer;
+            &:active {
+                scale: 0.9;
+            }
+            &#yes {
+                background-color: rgb(241, 106, 106);
+                &:hover {
+                    background-color: rgb(243, 71, 71);
+                }
+            }
+            &:hover {
+              background-color: rgb(4, 168, 4);
+            }
+        }
+    }
+  }
   nav {
     display: flex;
     justify-content: space-between;
@@ -61,6 +103,18 @@
     }
   }
   .accordion {
+    ul {
+        display: grid;
+        gap: 0.5em;
+        li {
+            cursor: pointer;
+            padding: 0.2em 0.3em;
+            border-radius: 8px;
+            &:hover {
+                background-color: lightpink;
+            }
+        }
+    }
     .title {
       display: flex;
       align-items: center;
