--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
 .mainContainer {
-  background-color: rgb(181, 146, 181);
+  background-color: rgb(181, 255, 227);
   padding: 1em 2em;
   display: grid;
   gap: 1em;
@@ -129,7 +129,7 @@
         align-items: center;
       }
       input {
-        background-color: rgb(198, 186, 186);
+        background-color: rgba(5, 107, 68, 0.1);
         flex: 1;
         padding: 4px;
         outline: none;
@@ -137,8 +137,10 @@
         border: none;
       }
       textarea {
-        background-color: rgb(198, 186, 186);
+        background-color: rgba(5, 107, 68, 0.1);
         border: none;
+        border-radius: 0.3em;
+        outline: none;
         flex: 1;
         height: 10em;
         grid-column: span 2;
@@ -146,13 +148,17 @@
       button {
         justify-self: end;
         grid-column-start: 2;
-        background-color: rgb(110, 110, 236);
-        color: white;
+        background-color: rgb(25, 209, 25);
+        color: black;
         border-radius: 8px;
         border: none;
         outline: none;
         font-size: 1.5em;
         padding: 0.2em 1em;
+        cursor: pointer;
+        &:active {
+          scale: 0.9;
+        }
       }
     }
   }
@@ -168,7 +174,7 @@
           color: gray;
         }
         &:hover {
-          background-color: rgb(210, 174, 210);
+          background-color: rgba(5, 107, 68, 0.2);
         }
       }
     }
@@ -195,7 +201,7 @@
             background-color: gray;
             left: 0;
             top: 0;
-          }
+            }
         }
       }
     }
@@ -203,6 +209,17 @@
       p {
         text-align: start;
       }
+    }
+  }
+  .loadingAnimation {
+    animation: rotate 1s linear infinite
+  }
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg)
+    }
+    100% {
+      transform: rotate(360deg);
     }
   }
 }
